# freetype-demo

./: .gitmodules  CMakeLists.txt  README.md
engine/: CMakeLists.txt
engine/src/: application.cpp  application.h
engine/src/core/: graphicscontext.h  input.cpp  input.h  layer.h  layerstack.cpp  layerstack.h  logger.h  timer.cpp  timer.h  window.h
engine/src/core/events/: event.h  keyevent.h  mouseevent.h  windowevent.h
engine/src/graphics/: buffer.h  bufferlayout.cpp  bufferlayout.h  framebuffer.h  renderstate.h  shader.h  texture.h  vertexarray.h
engine/src/imgui/: imguimanager.cpp  imguimanager.h
engine/src/math/: math.h  matrixstack.h  mvpstack.h
engine/src/renderer/: batcher.cpp  batcher.h  immgfx.cpp  immgfx.h  renderer.cpp  renderer.h
engine/src/utils/: assert.h  fileutils.h  handledobject.h  log.h  singleton.h  stringutils.h  stronghandle.h
ftinspect/: CMakeLists.txt  CMakeLists.txt~
ftinspect/src/: ftgrid.cpp  ftgrid.h  ftinspect.cpp  ftinspect.h  imguifilebrowser.cpp  imguifilebrowser.h  main.cpp  sdfgen.cpp  sdfgen.h
ftinspect/src/ftrenderer/: distancefieldshaders.inl  fontshaders.inl  ftrenderer.cpp  ftrenderer.h
